// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App playground 1`] = `
<App>
  <div
    className="container"
  >
    <LocalizationProvider
      localeCode="en"
    >
      <nav
        className="appbar"
      >
        <h2>
          Flap.js
        </h2>
        <p>
          <LocaleString
            entity="hi"
            params={Array []}
          >
            hi
          </LocaleString>
        </p>
        <button
          onClick={[Function]}
        >
          OPEN
        </button>
      </nav>
      <div
        className="appcontent"
      >
        <WorkspaceLayout
          renderBackground={[Function]}
          renderForeground={[Function]}
        >
          <section
            className="container "
          >
            <div
              className="foreground"
            >
              <SideBarLayout
                renderSideBar={[Function]}
                side="right"
              >
                <div
                  className="container "
                  style={
                    Object {
                      "flexDirection": "row-reverse",
                    }
                  }
                >
                  <div
                    className="sidebar right"
                  >
                    <div
                      className="sidetab  horizontal"
                    >
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                      <div
                        className="divider"
                      />
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                    </div>
                  </div>
                  <div
                    className="viewport"
                  >
                    <DrawerLayout
                      open={false}
                      renderDrawer={[Function]}
                      side="right"
                      snapBehavior="range"
                      snapPoints={
                        Array [
                          30,
                          50,
                          100,
                        ]
                      }
                    >
                      <div
                        className="container"
                        style={
                          Object {
                            "flexDirection": "row-reverse",
                          }
                        }
                      >
                        <div
                          className="drawer  right"
                          style={
                            Object {
                              "height": "100%",
                              "width": "30%",
                            }
                          }
                        >
                          <div
                            className="handle"
                            onMouseDown={[Function]}
                            role="presentation"
                          />
                          <div
                            className="content"
                          >
                            <div
                              style={
                                Object {
                                  "color": "white",
                                  "height": "100%",
                                  "width": "100%",
                                }
                              }
                            >
                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante. Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
                            </div>
                          </div>
                        </div>
                        <div
                          className="viewport"
                        >
                          <div
                            style={
                              Object {
                                "color": "white",
                                "height": "100%",
                                "width": "100%",
                              }
                            }
                          >
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante. Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
                          </div>
                        </div>
                      </div>
                    </DrawerLayout>
                  </div>
                </div>
              </SideBarLayout>
            </div>
            <div
              className="background"
            >
              <div
                style={
                  Object {
                    "background": "dodgerblue",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              />
            </div>
          </section>
        </WorkspaceLayout>
      </div>
    </LocalizationProvider>
  </div>
</App>
`;

exports[`Storyshots DrawerLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <DrawerLayout
      open={true}
      renderDrawer={[Function]}
      side="left"
      snapBehavior="range"
      snapPoints={
        Array [
          30,
          50,
          100,
        ]
      }
    >
      <div
        className="container"
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <div
          className="drawer  left open"
          style={
            Object {
              "height": "100%",
              "width": "30%",
            }
          }
        >
          <div
            className="handle"
            onMouseDown={[Function]}
            role="presentation"
          />
          <div
            className="content"
          >
            <div
              style={
                Object {
                  "color": "white",
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              I am drawer content. Yippee!!!
            </div>
          </div>
        </div>
        <div
          className="viewport"
        >
          <div
            style={
              Object {
                "color": "black",
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante.
            </p>
            <p>
              Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
            </p>
          </div>
        </div>
      </div>
    </DrawerLayout>
  </div>
</div>
`;

exports[`Storyshots HelloWorld custom style 1`] = `
<HelloWorld
  style={
    Object {
      "backgroundColor": "pink",
      "border": "5px dotted limegreen",
    }
  }
  title="custom style"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title"
      style={
        Object {
          "backgroundColor": "pink",
          "border": "5px dotted limegreen",
        }
      }
    >
      Hello 
      custom style
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots HelloWorld playground 1`] = `
<HelloWorld
  title="World!"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title"
    >
      Hello 
      World!
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots HelloWorld with rainbow 1`] = `
<HelloWorld
  rainbow={true}
  title="World!"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title rainbow "
    >
      Hello 
      World!
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots HelloWorld with title 1`] = `
<HelloWorld
  title="home"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title"
    >
      Hello 
      home
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots SideBarLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <SideBarLayout
      renderSideBar={[Function]}
      side="left"
    >
      <div
        className="container "
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <div
          className="sidebar left"
        >
          <div>
            <button>
              1
            </button>
            <button>
              2
            </button>
            <button>
              3
            </button>
            <button>
              4
            </button>
            <button>
              5
            </button>
          </div>
        </div>
        <div
          className="viewport"
        >
          <div
            style={
              Object {
                "color": "black",
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante.
            </p>
            <p>
              Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
            </p>
          </div>
        </div>
      </div>
    </SideBarLayout>
  </div>
</div>
`;

exports[`Storyshots WorkspaceLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <WorkspaceLayout
      renderBackground={[Function]}
      renderForeground={[Function]}
    >
      <section
        className="container "
      >
        <div
          className="foreground"
        >
          <div
            style={
              Object {
                "background": "dodgerblue",
              }
            }
          >
            Sed diam est, fermentum et blandit id, blandit ut est. Morbi venenatis interdum magna id feugiat. Nunc vestibulum sit amet massa ut malesuada. Donec non tortor eu ex feugiat finibus et non dolor. Integer in leo lorem. Nam accumsan finibus libero vehicula viverra. Fusce pulvinar sapien in tincidunt fermentum. Quisque vehicula convallis ullamcorper. Etiam luctus volutpat nisi, ut feugiat risus maximus tempus. Donec tincidunt accumsan sem. Donec vitae orci nec nisi scelerisque mollis. Ut fermentum sem eu magna volutpat semper. Suspendisse porta dui sit amet nulla hendrerit tincidunt. Nam eget diam sed libero tincidunt volutpat in non nisl. Cras id venenatis magna, sed facilisis tellus. Morbi lacinia at ante at congue.
          </div>
        </div>
        <div
          className="background"
        >
          <div>
            Duis imperdiet enim ut augue molestie elementum. In sagittis volutpat rutrum. Cras facilisis libero libero, in tempor ipsum rutrum vitae. Proin congue, odio eu consequat ultricies, lorem tellus blandit ex, a pulvinar ligula felis a nisi. Pellentesque fermentum a metus ac consectetur. In eros dolor, auctor nec elementum vel, iaculis vitae felis. In consectetur aliquam lorem, quis porta turpis molestie a. Quisque consectetur vulputate sem, nec cursus sem aliquet non. Pellentesque diam velit, ornare venenatis elit nec, pretium interdum libero. In vestibulum purus lectus, sit amet condimentum ante pellentesque vitae. Praesent ut tincidunt sapien, eu sollicitudin leo.
          </div>
        </div>
      </section>
    </WorkspaceLayout>
  </div>
</div>
`;
